--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
     "firebase-tools": "^10.0.1",
-    "global": "^4.4.0",
+    "movie-trailer": "^2.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
+    "react-youtube": "^7.14.0",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.2"
   },
